--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,14 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="../src/index.css">
 
     <title>To-do List</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script src="../src/App.js"></script>
 </html>
